service.yml
apiVersion: v1
kind: Service
metadata:
  name: smtp-lanathome-org-app-service
spec:
  selector:
    app: smtp-lanathome-org-app
  ports:
    - port: 25
      targetPort: 25
