route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: smtp-lanathome-org-app-route
spec:
  to:
    kind: Service
    name: smtp-lanathome-org-app-service
  port:
    targetPort: 25
